app/assets/tailwind/application.css
@import "tailwindcss";
@config "./tailwind.config.js";
@plugin "@tailwindcss/typography";
@plugin "@tailwindcss/forms";

@layer components {
  .btn-primary {
    @apply
      inline-flex
      justify-center
      items-center
      gap-2
      font-semibold
      border-2
      border-black
      rounded
      py-3
      px-8
      bg-black
      text-white
      hover:bg-banitsa-500
      hover:text-white
      hover:shadow-brutal
      hover:-translate-x-1
      hover:-translate-y-1
      transition
      ease-in-out;
  }

  .btn-secondary {
    @apply
      inline-flex
      justify-center
      items-center
      gap-2
      border-2
      border-black
      rounded-full
      py-2
      px-4
      hover:shadow-brutal
      hover:-translate-x-1
      hover:-translate-y-1
      transition
      ease-in-out;
  }

  .link-primary {
    @apply text-banitsa-600 hover:underline hover:decoration-banitsa-600 hover:underline-offset-4 hover:ease-in-out;
  }

  .link-secondary {
    @apply text-banitsa-50 hover:text-banitsa-500;
  }

  .badge-important {
    @apply rounded bg-banitsa-500 text-black text-base p-2 align-middle truncate;
  }

  .badge-warning {
    @apply rounded bg-x-orange text-black text-base p-2 align-middle truncate;
  }
}

